--- a/Copernicus.Models.Content/app.config
+++ b/Copernicus.Models.Content/app.config
@@ -46,6 +46,10 @@
         <assemblyIdentity name="System.Reflection.Metadata" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.0.21.0" newVersion="1.0.21.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NuGet.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.8.60318.667" newVersion="2.8.60318.667" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
