--- a/Copernicus/packages.config
+++ b/Copernicus/packages.config
@@ -1,28 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
-  <package id="Bender" version="3.0.10.0" targetFramework="net452" />
-  <package id="CraigsUtilityLibrary" version="4.0.280-beta" targetFramework="net452" />
-  <package id="CUL.Bender" version="4.0.280-beta" targetFramework="net452" />
-  <package id="CUL.JSON.Net" version="4.0.280-beta" targetFramework="net452" />
-  <package id="CUL.MiniProfiler" version="4.0.280-beta" targetFramework="net452" />
-  <package id="CUL.NLog" version="4.0.280-beta" targetFramework="net452" />
-  <package id="dotless" version="1.5.0" targetFramework="net452" />
+  <package id="Bender" version="3.0.22.0" targetFramework="net452" />
+  <package id="CraigsUtilityLibrary" version="4.0.289" targetFramework="net452" />
+  <package id="CUL.Bender" version="4.0.289" targetFramework="net452" />
+  <package id="CUL.fastJSON" version="4.0.289" targetFramework="net452" />
+  <package id="CUL.JSON.Net" version="4.0.289" targetFramework="net452" />
+  <package id="CUL.MiniProfiler" version="4.0.289" targetFramework="net452" />
+  <package id="CUL.NLog" version="4.0.289" targetFramework="net452" />
+  <package id="dotless" version="1.5.1" targetFramework="net452" />
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
   <package id="Elmah.Mvc" version="2.1.2" targetFramework="net452" />
+  <package id="fastJSON" version="2.1.14.0" targetFramework="net452" />
   <package id="flexo" version="1.0.22.0" targetFramework="net452" />
   <package id="Glimpse" version="1.8.6" targetFramework="net45" />
   <package id="Glimpse.Ado" version="1.7.3" targetFramework="net45" />
   <package id="Glimpse.AspNet" version="1.9.2" targetFramework="net452" />
-  <package id="Glimpse.CUL" version="4.0.280-beta" targetFramework="net452" />
+  <package id="Glimpse.CUL" version="4.0.289" targetFramework="net452" />
   <package id="Glimpse.Elmah" version="1.1.1" targetFramework="net45" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net45" />
   <package id="Glimpse.NLog" version="1.6.1" targetFramework="net452" />
-  <package id="Ironman.Core" version="1.0.280-beta" targetFramework="net452" />
-  <package id="Ironman.Core.Assets.Less" version="1.0.280-beta" targetFramework="net452" />
-  <package id="Ironman.Core.Assets.Yui" version="1.0.280-beta" targetFramework="net452" />
-  <package id="Ironman.Default" version="1.0.280-beta" targetFramework="net452" />
+  <package id="Ironman.Core" version="1.0.289" targetFramework="net452" />
+  <package id="Ironman.Core.Assets.Less" version="1.0.289" targetFramework="net452" />
+  <package id="Ironman.Core.Assets.Yui" version="1.0.289" targetFramework="net452" />
+  <package id="Ironman.Default" version="1.0.289" targetFramework="net452" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.0" targetFramework="net45" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net45" />
@@ -33,9 +35,9 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0-rc3" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.Common" version="1.0.0-rc3" targetFramework="net452" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0-rc3" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net452" />
@@ -53,9 +55,9 @@
   <package id="NLog" version="4.0.1" targetFramework="net452" />
   <package id="NLog.Config" version="4.0.0" targetFramework="net452" />
   <package id="NLog.Schema" version="4.0.0" targetFramework="net452" />
-  <package id="NuGet.Core" version="2.8.5" targetFramework="net452" />
+  <package id="NuGet.Core" version="2.8.6" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="RazorGenerator.Mvc" version="2.3.5" targetFramework="net452" />
+  <package id="RazorGenerator.Mvc" version="2.3.6" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net452" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net452" />
